# EncryptCloudStorge

./: .gitignore  CMakeLists.txt  README.md
kvstore/: htable
lib/: CMakeLists.txt  chunk.c  chunk.h  containerstore.c  containerstore.h  kvstore.c  kvstore.h  kvstore_htable.c  matrix.cpp  matrix.h  queue.c  utils.c  utils.h
lib/chunking/: ae_chunking.c  chunking.h  rabin_chunking.c
src/: CMakeLists.txt  client.cpp  server.cpp
